@@ -33,6 +33,13 @@ GMODULE_LIBS=`glib-config --libs gmodule`
 AC_SUBST(GMODULE_CFLAGS)
 AC_SUBST(GMODULE_LIBS)
 
+dnl *****************************
+dnl *** Checks for libpthread ***
+dnl *****************************
+AC_CHECK_LIB(pthread,pthread_create,PTHREAD_LIBS=-lpthread,
+	AC_MSG_ERROR([Cannot find libpthread]))
+AC_SUBST(PTHREAD_LIBS)
+
 CFLAGS='-g -Wall -Wunused -Wmissing-prototypes -Wmissing-declarations'
 
 TARGET="unknown"
