@@ -19,6 +19,7 @@ testjit_LDADD =				\
 	../metadata/libmetadata.a	\
 	$(GLIB_LIBS)			\
 	$(GMODULE_LIBS) 		\
+	$(PTHREAD_LIBS)			\
 	-lm
 
 codegen-x86.c codegen.h: x86.brg
